// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`horizontal > should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100px; height: 100%;"
  >
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;"
    >
      <div>
        0
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render 5 children 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 500px; height: 100%;"
  >
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;"
    >
      <div>
        0
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; visibility: visible; display: inline-flex;"
    >
      <div>
        1
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; visibility: visible; display: inline-flex;"
    >
      <div>
        2
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 300px; visibility: visible; display: inline-flex;"
    >
      <div>
        3
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 400px; visibility: visible; display: inline-flex;"
    >
      <div>
        4
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render 100 children 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 10000px; height: 100%;"
  >
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;"
    >
      <div>
        0
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; visibility: visible; display: inline-flex;"
    >
      <div>
        1
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; visibility: visible; display: inline-flex;"
    >
      <div>
        2
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 300px; visibility: visible; display: inline-flex;"
    >
      <div>
        3
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 400px; visibility: visible; display: inline-flex;"
    >
      <div>
        4
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 500px; visibility: visible; display: inline-flex;"
    >
      <div>
        5
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 600px; visibility: visible; display: inline-flex;"
    >
      <div>
        6
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 700px; visibility: visible; display: inline-flex;"
    >
      <div>
        7
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 800px; visibility: visible; display: inline-flex;"
    >
      <div>
        8
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 900px; visibility: visible; display: inline-flex;"
    >
      <div>
        9
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 1000px; visibility: visible; display: inline-flex;"
    >
      <div>
        10
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 1100px; visibility: visible; display: inline-flex;"
    >
      <div>
        11
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 1200px; visibility: visible; display: inline-flex;"
    >
      <div>
        12
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 1300px; visibility: visible; display: inline-flex;"
    >
      <div>
        13
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 1400px; visibility: visible; display: inline-flex;"
    >
      <div>
        14
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render 10000 children 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 1000000px; height: 100%;"
  >
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;"
    >
      <div>
        0
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; visibility: visible; display: inline-flex;"
    >
      <div>
        1
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; visibility: visible; display: inline-flex;"
    >
      <div>
        2
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 300px; visibility: visible; display: inline-flex;"
    >
      <div>
        3
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 400px; visibility: visible; display: inline-flex;"
    >
      <div>
        4
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 500px; visibility: visible; display: inline-flex;"
    >
      <div>
        5
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 600px; visibility: visible; display: inline-flex;"
    >
      <div>
        6
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 700px; visibility: visible; display: inline-flex;"
    >
      <div>
        7
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 800px; visibility: visible; display: inline-flex;"
    >
      <div>
        8
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 900px; visibility: visible; display: inline-flex;"
    >
      <div>
        9
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 1000px; visibility: visible; display: inline-flex;"
    >
      <div>
        10
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 1100px; visibility: visible; display: inline-flex;"
    >
      <div>
        11
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 1200px; visibility: visible; display: inline-flex;"
    >
      <div>
        12
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 1300px; visibility: visible; display: inline-flex;"
    >
      <div>
        13
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 1400px; visibility: visible; display: inline-flex;"
    >
      <div>
        14
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render component 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 300px; height: 100%;"
  >
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;"
    >
      <div>
        component
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; visibility: visible; display: inline-flex;"
    >
      <div>
        component
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; visibility: visible; display: inline-flex;"
    >
      <div>
        component
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render fragments 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 200px; height: 100%;"
  >
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;"
    >
      <div>
        fragment
      </div>
      <div>
        fragment
      </div>
      <div>
        fragment
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; visibility: visible; display: inline-flex;"
    >
      <div>
        fragment
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render non elements 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 200px; height: 100%;"
  >
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;"
    >
      string
    </div>
    <div
      style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; visibility: visible; display: inline-flex;"
    >
      123
    </div>
  </div>
</DocumentFragment>
`;

exports[`horizontal > should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="width: 100px; height: 800px;"
  >
    <div
      style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 500px; height: 100%;"
    >
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: visible; display: inline-flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 100px; visibility: visible; display: inline-flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 200px; visibility: visible; display: inline-flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 300px; visibility: visible; display: inline-flex;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 400px; visibility: visible; display: inline-flex;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should pass index to items 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 250px;"
  >
    <div
      data-index="0"
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;"
    >
      <div>
        0
      </div>
    </div>
    <div
      data-index="1"
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;"
    >
      <div>
        1
      </div>
    </div>
    <div
      data-index="2"
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;"
    >
      <div>
        2
      </div>
    </div>
    <div
      data-index="3"
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px; visibility: visible;"
    >
      <div>
        3
      </div>
    </div>
    <div
      data-index="4"
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px; visibility: visible;"
    >
      <div>
        4
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render with render prop 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 50000px;"
  >
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;"
    >
      <div>
        This is 0
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;"
    >
      <div>
        This is 1
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;"
    >
      <div>
        This is 2
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px; visibility: visible;"
    >
      <div>
        This is 3
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px; visibility: visible;"
    >
      <div>
        This is 4
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 250px; visibility: visible;"
    >
      <div>
        This is 5
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 300px; visibility: visible;"
    >
      <div>
        This is 6
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 350px; visibility: visible;"
    >
      <div>
        This is 7
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 400px; visibility: visible;"
    >
      <div>
        This is 8
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 450px; visibility: visible;"
    >
      <div>
        This is 9
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 500px; visibility: visible;"
    >
      <div>
        This is 10
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 550px; visibility: visible;"
    >
      <div>
        This is 11
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 600px; visibility: visible;"
    >
      <div>
        This is 12
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 650px; visibility: visible;"
    >
      <div>
        This is 13
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 700px; visibility: visible;"
    >
      <div>
        This is 14
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 750px; visibility: visible;"
    >
      <div>
        This is 15
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 800px; visibility: visible;"
    >
      <div>
        This is 16
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 850px; visibility: visible;"
    >
      <div>
        This is 17
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 900px; visibility: visible;"
    >
      <div>
        This is 18
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 950px; visibility: visible;"
    >
      <div>
        This is 19
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 50px;"
  >
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;"
    >
      <div>
        0
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render 5 children 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 250px;"
  >
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;"
    >
      <div>
        0
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;"
    >
      <div>
        1
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;"
    >
      <div>
        2
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px; visibility: visible;"
    >
      <div>
        3
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px; visibility: visible;"
    >
      <div>
        4
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render 100 children 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 5000px;"
  >
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;"
    >
      <div>
        0
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;"
    >
      <div>
        1
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;"
    >
      <div>
        2
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px; visibility: visible;"
    >
      <div>
        3
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px; visibility: visible;"
    >
      <div>
        4
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 250px; visibility: visible;"
    >
      <div>
        5
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 300px; visibility: visible;"
    >
      <div>
        6
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 350px; visibility: visible;"
    >
      <div>
        7
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 400px; visibility: visible;"
    >
      <div>
        8
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 450px; visibility: visible;"
    >
      <div>
        9
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 500px; visibility: visible;"
    >
      <div>
        10
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 550px; visibility: visible;"
    >
      <div>
        11
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 600px; visibility: visible;"
    >
      <div>
        12
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 650px; visibility: visible;"
    >
      <div>
        13
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 700px; visibility: visible;"
    >
      <div>
        14
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 750px; visibility: visible;"
    >
      <div>
        15
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 800px; visibility: visible;"
    >
      <div>
        16
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 850px; visibility: visible;"
    >
      <div>
        17
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 900px; visibility: visible;"
    >
      <div>
        18
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 950px; visibility: visible;"
    >
      <div>
        19
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render 10000 children 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 500000px;"
  >
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;"
    >
      <div>
        0
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;"
    >
      <div>
        1
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;"
    >
      <div>
        2
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px; visibility: visible;"
    >
      <div>
        3
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px; visibility: visible;"
    >
      <div>
        4
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 250px; visibility: visible;"
    >
      <div>
        5
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 300px; visibility: visible;"
    >
      <div>
        6
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 350px; visibility: visible;"
    >
      <div>
        7
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 400px; visibility: visible;"
    >
      <div>
        8
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 450px; visibility: visible;"
    >
      <div>
        9
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 500px; visibility: visible;"
    >
      <div>
        10
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 550px; visibility: visible;"
    >
      <div>
        11
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 600px; visibility: visible;"
    >
      <div>
        12
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 650px; visibility: visible;"
    >
      <div>
        13
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 700px; visibility: visible;"
    >
      <div>
        14
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 750px; visibility: visible;"
    >
      <div>
        15
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 800px; visibility: visible;"
    >
      <div>
        16
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 850px; visibility: visible;"
    >
      <div>
        17
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 900px; visibility: visible;"
    >
      <div>
        18
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 950px; visibility: visible;"
    >
      <div>
        19
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render component 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 150px;"
  >
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;"
    >
      <div>
        component
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;"
    >
      <div>
        component
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;"
    >
      <div>
        component
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render fragments 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 100px;"
  >
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;"
    >
      <div>
        fragment
      </div>
      <div>
        fragment
      </div>
      <div>
        fragment
      </div>
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;"
    >
      <div>
        fragment
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render non elements 1`] = `
<DocumentFragment>
  <div
    style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 100px;"
  >
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;"
    >
      string
    </div>
    <div
      style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;"
    >
      123
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical > should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="width: 100px; height: 800px;"
  >
    <div
      style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 250px;"
    >
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: visible;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 50px; visibility: visible;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 100px; visibility: visible;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 150px; visibility: visible;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 200px; visibility: visible;"
      >
        <div>
          4
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
